--- a/src/resources/elements/editable.scss
+++ b/src/resources/elements/editable.scss
@@ -14,6 +14,10 @@ div.story-panel {
     }
 }
 
+div.preview-header {
+    display:flex;
+    width:100%;
+}
 div.preview-header,
 div.story-section p {
     padding-right: 8px;
@@ -23,3 +27,14 @@ div.story-section p {
 div.checkable.selected {
     background-color: lightblue;
 }
+
+div.editable-box {
+    margin-top:0px;
+    margin-right:0;
+    margin-left:0;
+    padding:0;
+    div.message-body {
+        padding-top: 8px;
+    }
+}
+
