--- a/src/home/_home.scss
+++ b/src/home/_home.scss
@@ -58,6 +58,8 @@
             }
 
             .story-preview {
+                display: flex;
+                flex-direction: column;
                 text-align: right;
                 width: 100%;
                 overflow: hidden;
