no more annoying stars

--- a/src/_app.scss
+++ b/src/_app.scss
@@ -25,6 +25,13 @@
     .nav-item {
         color: inherit;
         display: inline-block;
+        &.active {
+            color: blue;
+            cursor: default;
+        }
+        &:hover {
+            color: blue;
+        }
     }
 
     &.navbar-default {
