--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,7 @@ $navbar-default-link-active-bg: inherit;
 /* Pages */
 @import 'app';
 @import 'home/home';
+@import 'photos/photos';
 
 /* Elements */
 @import 'resources/elements/photo-strip';
