--- a/src/members/_members.scss
+++ b/src/members/_members.scss
@@ -184,23 +184,26 @@ ux-dialog-containerxxx {
 
         }
     }
+    div.life-summary {
+        margin-bottom:20px;
+        padding-left:20px;
+        padding-bottom:10px;
+        padding-right:32px;
+    }
     #stories {
         position: relative;
         padding: 0;
-        border: solid 6px white;
 
         .story-box {
             //height: 260px;
             overflow-y: auto;
             overflow-x: hidden;
-            border-bottom: 6px solid white;
-            //border-top: 6px solid white;
-            //border-bottom: 6px solid white;
             background-color: rgba(208, 208, 208, 0.5);
             padding-right:8px;
             cursor: pointer;
-            &.notfirst {
-                border-left: 6px solid white;
+            border: 6px solid white;
+            &:not(:first-child) {
+                border-right: 0;
             }
 
             .member-story-header {
@@ -216,15 +219,11 @@ ux-dialog-containerxxx {
 
             .member-story-preview {
                 padding-right: 8px;
-                width:256px;
             }
 
             a.goto-story-page {
                 position:absolute;
                 left:-28px;
-            }
-            h4 {
-                width:225px;
             }
             span.name {
                 font-weight: bold;
