--- a/src/stories/stories.scss
+++ b/src/stories/stories.scss
@@ -147,5 +147,26 @@ div.story-preview {
     }
 }
 
+.page-control
+{
+    position: absolute;
+    z-index: 1;
+
+    // INFO [Matt] These top & margin-top styles are the quintessential "vertical center" pattern.
+    top: 0%;
+    width: 5%;
+    height:100%;
+    opacity: 0.15;
+    background-color: lightblue;
+    cursor: pointer;
+    &.next {
+        left: 0%;
+    }
+    &.prev {
+        right: 0%;
+    }
+}
+
+
 
 
