--- a/src/stories/stories.scss
+++ b/src/stories/stories.scss
@@ -104,7 +104,7 @@ button.active {
 div.full-story {
     max-height: 600px;
     overflow: auto;
-    margin: 0 -22px 0 20px;
+    margin: 10px -22px 0 20px;
 }
 
 p {
