--- a/src/members/_members.scss
+++ b/src/members/_members.scss
@@ -253,6 +253,12 @@ selector select {
     height: 32px;
 }
 
+div.members-selector {
+    padding-top:16px;
+    padding-right:6px;
+    padding-left:6px;
+}
+
 //date-range
 .member-info .date-range {
     label {
