collect device info in feedback

--- a/src/members/_members.desktop.scss
+++ b/src/members/_members.desktop.scss
@@ -10,3 +10,10 @@ div.member-list.content-area li.list-group-item {
          }
     }
 }
+
+#member-detail {
+    #member-detail-content > div {
+        min-height: 271px;
+    }
+}
+
