--- a/src/members/_members.scss
+++ b/src/members/_members.scss
@@ -171,7 +171,7 @@ ux-dialog-containerxxx {
     padding-right:19px;
     #member-detail-content > div {
     //height: calc(100vh - 713px);
-        min-height: 271px;
+        //min-height: 271px;
 
         .member-story-panel-moved {
             overflow-y: auto;
