--- a/src/_app.scss
+++ b/src/_app.scss
@@ -102,11 +102,13 @@
     span.footer-item {
         margin-right:12px;
         margin-left:12px;
+        color: grey;
     }
     button {
         font-weight: bolder;
         font-size: 16px;
         border-radius: 10px;
+        color: grey;
     }
 }
 
