--- a/src/home/_home.scss
+++ b/src/home/_home.scss
@@ -120,6 +120,7 @@
     > div {
         @include container;
         height: 100%;
+        justify-content: space-between;
         align-items: center;
     }
 
