--- a/src/_app.scss
+++ b/src/_app.scss
@@ -85,7 +85,7 @@
 
 #router-view {
     background-repeat: no-repeat;
-    overflow: auto;
+     overflow: auto;  //should be none?
 }
 
 #footer .footer-area {
