black sheep works

--- a/src/games/black-sheep/black-sheep.scss
+++ b/src/games/black-sheep/black-sheep.scss
@@ -48,7 +48,7 @@ div#bs-board {
                 &.white {
                     background-color: white;
                 }
-                &.empty {
+                &.gray {
                     background-color: "lightgray";
                 }
                 width: $hole_size;
