--- a/src/styles.scss
+++ b/src/styles.scss
@@ -229,6 +229,9 @@ ul.nav > li > a {
 .font-size-150 {
     font-size: 150%;
 }
+.font-size-180 {
+    font-size: 180%;
+}
 
 /* Dependencies */
 @import '../node_modules/bootstrap-sass/assets/stylesheets/bootstrap';
