--- a/src/videos/videos.scss
+++ b/src/videos/videos.scss
@@ -1,15 +1,26 @@
-#video-page {
-    .panel-vid {
+$vid-height: 121px;
+$vid-width: 168px;
+div.video-page {
+    height:380px;
+    width:100%;
+    margin-bottom:24px;
+    margin-top:20px;
+    padding-right:24px;
+    div.video-panel {
         display:flex;
         flex-wrap: wrap;
         flex-direction: row;
         justify-content: flex-start;
         align-content: flex-start;
         height: 600px;
-        width:100%;
+        width: 100%;
         span {
-            width: 230px;
-            height: 140px;
+            width: $vid-width + 16px;
+            height: $vid-height + 20px;
+            .video-iframe {
+                width: $vid-width;
+                height: $vid-height;
+            }
         }
     }
 }
