--- a/src/videos/videos.scss
+++ b/src/videos/videos.scss
@@ -1,5 +1,5 @@
-$vid-height: 180px;
-$vid-width: 250px;
+$vid-height: 160px;
+$vid-width: 260px;
 div.video-page {
     height:380px;
     width:100%;
@@ -14,6 +14,8 @@ div.video-page {
         align-content: flex-start;
         height: 600px;
         width: 100%;
+        height: 640px;
+        overflow: auto;
         span.fr-video {
             width: $vid-width + 16px;
             height: $vid-height + 20px;
@@ -27,4 +29,14 @@ div.video-page {
             font-size: 14px;
         }
     }
+    div.paging-buttons {
+        display: flex;
+        padding-left:36px;
+        button {
+            font-weight: bolder;
+            font-size: 215%;
+            border: none;
+        }
+    }
 }
+
