select / delete /edit video. wip.

--- a/src/videos/videos.scss
+++ b/src/videos/videos.scss
@@ -27,6 +27,12 @@ div.video-page {
         }
         span.video-name {
             font-size: 14px;
+            span {
+                cursor: pointer;
+                i:hover {
+                    background-color: lightblue;
+                }
+            }
         }
     }
     div.paging-buttons {
