improved paging. videos - wip.

--- a/src/videos/videos.scss
+++ b/src/videos/videos.scss
@@ -38,6 +38,7 @@ div.video-page {
     div.paging-buttons {
         display: flex;
         padding-left:36px;
+        margin-top: -12px;
         button {
             font-weight: bolder;
             font-size: 215%;
