larger fonts for messages

--- a/src/home/_home.scss
+++ b/src/home/_home.scss
@@ -104,8 +104,13 @@
             }
         }
 
+        .preview-header  div.checkable {
+                font-size:108%;
+        }
+
         .message + .message {
             margin-top: 1rem;
+           
         }
     }
 }
