--- a/src/_app.scss
+++ b/src/_app.scss
@@ -67,6 +67,7 @@
         .search-box-input {
             padding-left: 2rem;
             padding-right: 0.5rem;
+            font-size: 90%;
             width: 100%;
         }
 
