get ready for https

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -238,4 +238,4 @@ ul.nav > li > a {
 @import '../node_modules/froala-editor/css/froala_editor.pkgd.min';
 @import '../node_modules/froala-editor/css/froala_style.min';
 @import '../node_modules/json.human/css/json.human';
-@import url(http://fonts.googleapis.com/earlyaccess/alefhebrew.css);
+@import url(https://fonts.googleapis.com/earlyaccess/alefhebrew.css);
