--- a/src/styles.scss
+++ b/src/styles.scss
@@ -76,7 +76,7 @@ ux-dialog-footer>button {
 }
 
 .full {
-  background: url(http://placehold.it/1920x1080) no-repeat center center fixed;
+  background: url(https://placehold.it/1920x1080) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -197,7 +197,7 @@ ul.nav > li > a {
     height: 100%;
     z-index: 1;
     opacity: 0.6;
-    background-image: url('http://placekitten.com/1500/1000');
+    background-image: url('https://placekitten.com/1500/1000');
     background-repeat: no-repeat;
     background-position: 50% 0;
     -ms-background-size: cover;
