--- a/src/resources/elements/multi-select/multi-select.scss
+++ b/src/resources/elements/multi-select/multi-select.scss
@@ -119,8 +119,16 @@
         }
     }
 
-    span.option-group {
+    .option-kind-0 {
+        color: green;
+    }
+
+    .option-kind-1 {
         color: blue;
+    }
+
+    .option-kind-2 {
+        color: inherited;
     }
 
     div.unselected {
