make it behave just after creation

--- a/src/resources/elements/multi-select/multi-select.scss
+++ b/src/resources/elements/multi-select/multi-select.scss
@@ -23,9 +23,10 @@
         margin-right: 0px;
     }
 
-    /*div.ms-container {
-        height: 180px;
-    }*/
+    div.ms-container {
+        min-height: 40px;
+        position: relative;
+    }
 
     ul {
         list-style-type: none;
