--- a/src/stories/stories.scss
+++ b/src/stories/stories.scss
@@ -170,6 +170,13 @@ div.story-preview {
     }
 }
 
-
+ul.story-list {
+    width:100%;
+    padding:0;
+    height:560px;
+    overflow:auto;
+    list-style-type: none;
+    padding-left:20px;
+}
 
 
