--- a/src/styles.scss
+++ b/src/styles.scss
@@ -207,6 +207,14 @@ ul.nav > li > a {
     background-size: cover;
 }
 
+.unselectable {
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -o-user-select: none;
+    user-select: none;    
+}
+
 .highlight {
     background-color: yellow;
 }
