handle 2 sided photos

--- a/src/photos/_photos.scss
+++ b/src/photos/_photos.scss
@@ -47,5 +47,8 @@ div.panel.panel-default {
         cursor: pointer;
         float:left;
     }
+}
 
+img.flipable {
+    border-right: solid 8px orange;
 }
