flip full size photo

--- a/src/photos/full-size-photo.scss
+++ b/src/photos/full-size-photo.scss
@@ -47,6 +47,10 @@ button.face:hover {
         top: 96px;
         color: white;
     }
+    &.flip-sides {
+        top: 128px;
+        color: white;
+    }
 }
 
 .full-size-photo .highlighted-face {
