replace duplicate photos. wip.

--- a/src/photos/_photos.scss
+++ b/src/photos/_photos.scss
@@ -52,3 +52,11 @@ div.panel.panel-default {
 img.flipable {
     border-right: solid 12px orange;
 }
+
+img.duplicate {
+    opacity: 0.25;
+}
+
+img.similar {
+    border-radius: 20%;
+}
