custom dialog overlay

--- a/src/stories/stories.scss
+++ b/src/stories/stories.scss
@@ -1,7 +1,7 @@
-ux-dialog-overlay.active {
+/* ux-dialog-overlay.active {
     background-color: black;
     opacity: 0.95;
-}
+} */
 
 ux-dialog {
     direction:rtl;
