--- a/src/photos/full-size-photo.scss
+++ b/src/photos/full-size-photo.scss
@@ -63,10 +63,10 @@ button.face:hover {
 }
 
 
-ux-dialog-overlay.active {
+body.black-overlay ux-dialog-overlay.active {
     background-color: black;
     opacity: 0.9;
-}
+} 
 
 .full-size-photo .date-range label {
     margin-right:-6px;
