--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,7 +22,7 @@ $navbar-default-link-active-bg: inherit;
 
 /* Globals */
 html, body {
-    height: 100vh;
+    //height: 100vh;
     width: 100vw;
     font-family: "Alef Hebrew",
                  “Helvetica Neue”,
