--- a/src/_app.scss
+++ b/src/_app.scss
@@ -36,7 +36,7 @@
     }
 
     &.navbar-default {
-        background: white !important;
+        background-color: #fff !important;
     }
 
     .navbar-logo {
@@ -80,7 +80,6 @@
 
     .search-box-button {
         background-color: lightblue;
-        color: white;
         border: solid 1px lightblue;
     }
 }
