--- a/src/photos/_photos.scss
+++ b/src/photos/_photos.scss
@@ -60,3 +60,12 @@ img.duplicate {
 img.similar {
     border-radius: 20%;
 }
+
+#photos-container {
+    margin: 0;
+    padding: 0;
+    margin-bottom: 16px;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
+}
