improve mobile behavior

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,7 @@ $navbar-default-link-active-bg: inherit;
 @import 'app';
 @import 'home/home';
 @import 'photos/photos';
+@import 'terms/terms';
 @import 'members/members';
 
 /* Elements */
