--- a/src/stories/_stories.desktop.scss
+++ b/src/stories/_stories.desktop.scss
@@ -9,3 +9,13 @@
  #stories-page .container .content-area {
     padding-right: 36px;
 }
+
+ul.story-list {
+    width: 100%;
+}
+
+div.big-story-panel {
+    padding-left: 12px;
+    padding-right: 12px;
+}
+
