--- a/src/stories/_stories.scss
+++ b/src/stories/_stories.scss
@@ -16,10 +16,7 @@ ux-dialog>ux-dialog-body {
 }
 
 div.big-story-panel {
-    //width: 600px;
     overflow: auto;
-    padding-left: 12px;
-    padding-right: 12px;
     p {
         font-size: 110%;
         text-align: justify;
@@ -174,7 +171,7 @@ div.story-preview {
 }
 
 ul.story-list {
-    width:100%;
+    //width:100%;
     padding:0;
     list-style-type: none;
     padding-left: 20px;
