mobile. videos. more.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,6 +18,7 @@ $navbar-default-link-active-bg: inherit;
 @import 'photos/photos';
 @import 'stories/stories';
 @import 'terms/terms';
+@import 'videos/videos';
 
 /* Elements */
 @import 'resources/elements/photo-strip';
