--- a/src/_app.scss
+++ b/src/_app.scss
@@ -15,6 +15,13 @@
     .loader {
         font-size: 1.5em;
         color: blue;
+        &.smaller {
+            position: absolute;
+            top: 150px;
+            left: 150px;
+            color: blue;
+            font-size: 5em;
+        }
     }
 
     .nav-items {
