--- a/src/_app.scss
+++ b/src/_app.scss
@@ -17,10 +17,10 @@
         color: blue;
         &.smaller {
             position: absolute;
-            top: 150px;
-            left: 150px;
+            top: 45vh;
+            left: 45vw;
             color: blue;
-            font-size: 5em;
+            font-size: 3em;
         }
     }
 
