--- a/src/photos/_photos.scss
+++ b/src/photos/_photos.scss
@@ -69,3 +69,10 @@ img.similar {
     flex-wrap: wrap;
     align-content: flex-start;
 }
+
+#photos_area {
+    width: 100%;
+    margin-bottom: 24px;
+    margin-top: 20px;
+    padding-right: 24px;
+}
