--- a/src/home/_home.scss
+++ b/src/home/_home.scss
@@ -19,6 +19,10 @@
 .panel-vid {
     display: flex;
     padding: 0;
+    iframe {
+        height: 121px;
+        margin-bottom: 16px;
+    }
 }
 
 .panel-stories {
