members page in mobile

--- a/src/members/_members.mobile.scss
+++ b/src/members/_members.mobile.scss
@@ -10,3 +10,8 @@ div.member-list.content-area li.list-group-item {
          }
     }
 }
+
+#members-filter {
+    width: 90%;
+    font-size: 13px;
+}
