--- a/src/members/_members.scss
+++ b/src/members/_members.scss
@@ -66,7 +66,7 @@ div.member-list {
     direction: rtl;
     overflow: auto;
     padding: 16px;
-    padding-right: 36px;
+    //padding-right: 36px;
     margin-top: 16px;
     margin-bottom: 16px;
     margin-left: auto;
