--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,6 +19,7 @@ $navbar-default-link-active-bg: inherit;
 @import 'stories/stories';
 @import 'terms/terms';
 @import 'videos/videos';
+@import 'docs/docs';
 
 /* Elements */
 @import 'resources/elements/photo-strip';
