--- a/src/docs/_docs.mobile.scss
+++ b/src/docs/_docs.mobile.scss
@@ -3,6 +3,9 @@ ul.doc-list {
         margin-right: -30px;
         margin-left: -30px;
     }
+    div.one-doc p {
+        font-size:80%;
+    }
 }
 
 #doc-area span {
