--- a/src/docs/_docs.desktop.scss
+++ b/src/docs/_docs.desktop.scss
@@ -1,8 +1,16 @@
+#docs-content-area {
+    padding-right: 36px;
+}
+
 ul.doc-list {
-    height:560px;
-    overflow:auto;
-    padding-left:20px;
+    height: 560px;
+    overflow: auto;
+    padding-left: 20px;
     .story-preview {
         padding-right: 30px;
+    }
+    div.one-doc {
+        padding-right: 20px;
+        padding-left: 20px;
     }
 }
