--- a/src/docs/_docs.scss
+++ b/src/docs/_docs.scss
@@ -1,16 +1,30 @@
 @include mobile {@import 'docs.mobile'; }
 @include desktop {@import 'docs.desktop'; }
 
+#docs-content-area {
+    width: 100%;
+    margin-top: 16px;
+}
+
 ul.doc-list {
-    width:100%;
-    padding:0;
+    width: 100%;
+    padding: 0;
     list-style-type: none;
     li {
-        float:right;
-        border-bottom:2px solid lightgray;
-        padding-bottom:20px;
-        position:relative;
-        width:100%;
-        margin-bottom:16px;
+        float: right;
+        border-bottom: 2px solid lightgray;
+        padding-bottom: 20px;
+        position: relative;
+        width: 100%;
+        margin-bottom: 16px;
+        div.one-doc {
+            height: 130px;
+            overflow: hidden;
+            padding-top: 0px;
+            display: flex;
+            img {
+                cursor: pointer;
+            }
+        }
     }
 }
