edit-filters label. photos in mobile.

--- a/src/photos/_photos.mobile.scss
+++ b/src/photos/_photos.mobile.scss
@@ -12,3 +12,12 @@
     padding-bottom: 12px;
 }
 
+.content-area.photos {
+    width: 100vh;
+    margin: 0;
+    padding:0;
+}
+
+#photos-container {
+    width: 100vw;
+}
