photos and videos layout

--- a/src/photos/_photos.mobile.scss
+++ b/src/photos/_photos.mobile.scss
@@ -4,12 +4,13 @@
 
 #photo-filters-panel {
     &.rtl {
-        padding-right: 30px;
+        padding-right: 50px;
     }
     &.ltr {
-        padding-left: 30px;
+        padding-left: 50px;
     }
     padding-bottom: 12px;
+    width: 100vw;
 }
 
 .content-area.photos {
