--- a/src/videos/_videos.mobile.scss
+++ b/src/videos/_videos.mobile.scss
@@ -1,17 +1,17 @@
 $vid-height: 160px;
 $vid-width: 260px;
 div.video-page {
-    width:100%;
+    width:100vw;
     margin-bottom:24px;
     margin-top:20px;
-    padding-right:24px;
+    padding-right:50px;
     div.video-panel {
         display:flex;
         flex-wrap: wrap;
         flex-direction: row;
         justify-content: flex-start;
         align-content: flex-start;
-        width: 100%;
+        width: 100vw;
         span.fr-video {
             width: $vid-width + 16px;
             height: $vid-height + 20px;
@@ -37,8 +37,10 @@ div.video-page {
         margin-top: -12px;
         button {
             font-weight: bolder;
-            font-size: 215%;
+            font-size: 175%;
             border: none;
+            padding-left: 5px;
+            padding-right: 5px;
         }
     }
 
@@ -51,3 +53,19 @@ div.video-page {
          }
     }
 }
+
+
+#videos-name-search {
+    width: 160px;
+    font-size:80%;
+}
+
+#video-filters {
+    width: 96vw;
+}
+
+#video-help {
+    top: 200px;
+    left: 10px;
+}
+
