--- a/src/videos/_videos.scss
+++ b/src/videos/_videos.scss
@@ -1,4 +1,6 @@
 @include mobile { @import 'videos.mobile'; }
 @include desktop { @import 'videos.desktop'; }
 
-
+#video-help {
+    position:absolute;
+}
