--- a/src/photos/full-size-photo.scss
+++ b/src/photos/full-size-photo.scss
@@ -51,6 +51,14 @@ button.face:hover {
         top: 128px;
         color: white;
     }
+    &.crop {
+        top: 160px;
+        color: white;
+    }
+    &.cancel-crop {
+        top: 192px;
+        color: white;
+    }
 }
 
 .full-size-photo .highlighted-face {
