--- a/src/photos/_range.scss
+++ b/src/photos/_range.scss
@@ -3,7 +3,7 @@
     cursor: pointer;
     width: 128px !important;
     -webkit-appearance: none;
-    z-index: 200;
+    //z-index: 200;
     //width:50px;
     border: 1px solid #e6e6e6;
     background-color: #e6e6e6;
