--- a/src/photos/full-size-photo.scss
+++ b/src/photos/full-size-photo.scss
@@ -90,3 +90,11 @@ body.black-overlay ux-dialog-overlay.active {
     width:100px;
 }
 
+button.prev-slide:focus {
+    color: yellow;
+}
+
+button.next-slide:focus {
+    color: yellow;
+}
+
