search-input. role change.

--- a/src/terms/_terms.scss
+++ b/src/terms/_terms.scss
@@ -8,3 +8,10 @@
     list-style-type: none;
     padding-left: 20px;
 }
+
+form.fast-term-search {
+    height: 34px;
+    div.search-input div.spyglass-div {
+        height: 36px;
+    }
+} 
