the x in search input must be absolute

--- a/src/resources/elements/search-input.scss
+++ b/src/resources/elements/search-input.scss
@@ -5,6 +5,7 @@ div.search-input {
         top: 12px;
         left: 10px;
         color: gray;
+        position: absolute;
     }
     div.spyglass-div {
         width: 40px;
