sort stories by story date. wip.

--- a/src/resources/elements/search-input.scss
+++ b/src/resources/elements/search-input.scss
@@ -9,6 +9,7 @@ div.search-input {
     }
     div.spyglass-div {
         width: 40px;
+        height: 32px;
         background-color: #eaeaea;
         border: 1px solid gray;
         padding-top: 1px;
