--- a/src/stories/_stories.desktop.scss
+++ b/src/stories/_stories.desktop.scss
@@ -2,6 +2,9 @@
     height: 647px;
     ul.story-list {
         height:560px;
+        &.empty-stories {
+            height: 500px;
+        }
         overflow:auto;
         width: 100%
     }
