--- a/src/admin/admin.scss
+++ b/src/admin/admin.scss
@@ -26,3 +26,12 @@ th {
     background-color: lightgray;
 }
 
+.success {
+    background-color: lightgreen;
+}
+
+.error {
+    background-color: red;
+    color: white;
+}
+
