--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,6 +20,7 @@ $navbar-default-link-active-bg: inherit;
 @import 'terms/terms';
 @import 'videos/videos';
 @import 'docs/docs';
+@import 'gallery/gallery';
 
 /* Elements */
 @import 'resources/elements/photo-strip';
