--- a/src/gallery/_gallery.scss
+++ b/src/gallery/_gallery.scss
@@ -30,7 +30,7 @@ div.scaled-frame {
     height: 350px;
     padding: 0;
     overflow: hidden;
-    border: 1px solid lightgray;
+    border: 4px solid white;
 }
 .frame {
     width: 1200px;
