--- a/src/styles.scss
+++ b/src/styles.scss
@@ -133,6 +133,7 @@ ux-dialog>ux-dialog-header>button {
 
 .rtl {
     direction: rtl;
+    display: flex;
     &.float {
         float: right;
         &.anti {
@@ -143,6 +144,7 @@ ux-dialog>ux-dialog-header>button {
 
 .ltr {
     direction: ltr;
+    display: flex;
     &.float {
         float: left;
         &.anti {
