quiz. formats. wip.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,6 +24,7 @@ $navbar-default-link-active-bg: inherit;
 
 /* Elements */
 @import 'resources/elements/photo-strip';
+@import 'resources/elements/quiz';
 
 /* Globals */
 html, body {
