--- a/src/resources/elements/quiz.scss
+++ b/src/resources/elements/quiz.scss
@@ -23,8 +23,14 @@ quiz {
                 }
              }
         }
+        div.checked {
+            background: lightblue;
+        }
     }
     span.checked {
         font-weight: bolder;
+    }
+    button.dirty {
+        background-color: orange;
     }
 }
