popup to edit q & a in quiz.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,7 +24,7 @@ $navbar-default-link-active-bg: inherit;
 
 /* Elements */
 @import 'resources/elements/photo-strip';
-@import 'resources/elements/quiz';
+@import 'resources/elements/quiz/quiz';
 
 /* Globals */
 html, body {
