audios. work in progress.

--- a/src/resources/elements/editable.scss
+++ b/src/resources/elements/editable.scss
@@ -1,5 +1,5 @@
 div.story-panel {
-    height: 180px;
+    height: 100%;
     padding-left:8px;
     overflow: auto;
     //border-left: 3px solid darkgray;
