--- a/src/stories/_stories.scss
+++ b/src/stories/_stories.scss
@@ -75,7 +75,7 @@ div.stories-member-list li.list-group-item {
 }
 
 div.story-section {
-    height: 180px;
+    //height: 180px;
     overflow: hidden;
     font-size: 14px !important;
     //border-left: 3px solid darkgray;
