--- a/src/_palettes.scss
+++ b/src/_palettes.scss
@@ -2,7 +2,7 @@
     .top-head, .footer-area {
         background: rgba(80, 80, 80, 0.3);
     }
-    .editable, .story-preview, .member-story-preview {
+    .editable, .story-preview, .member-story-preview, .outer-story-preview {
         background-color: default;
     }
     .detail-header {
@@ -17,7 +17,7 @@
     .top-head, .footer-area {
         background: rgba(160, 100, 0, 0.3);
     }
-    .editable, .story-preview, .member-story-preview {
+    .editable, .story-preview, .member-story-preview, .outer-story-preview {
         background-color:beige;
     }
     .detail-header {
@@ -32,7 +32,7 @@
     .top-head, .footer-area {
         background: rgba(0, 80, 180, 0.3);
     }
-    .editable, .story-preview, .member-story-preview {
+    .editable, .story-preview, .member-story-preview, .outer-story-preview {
         background-color: lightblue;
     }
     .detail-header {
@@ -47,7 +47,7 @@
     .top-head, .footer-area {
         background: rgba(80, 180, 0, 0.3);
     }
-    .editable, .story-preview, .member-story-preview {
+    .editable, .story-preview, .member-story-preview, .outer-story-preview {
         background-color: lightseagreen;
     }
     .detail-header {
