--- a/src/stories/_stories.scss
+++ b/src/stories/_stories.scss
@@ -147,6 +147,15 @@ div.story-preview {
     }
 }
 
+div.outer-story-preview {
+    height:130px;
+    overflow:hidden;
+    padding-right:20px;
+    padding-left:20px;
+    padding-top:0px;
+    cursor:pointer;
+}
+
 .page-control
 {
     position: absolute;
