collapse / expand. wip.

--- a/src/resources/elements/multi-select/multi-select.scss
+++ b/src/resources/elements/multi-select/multi-select.scss
@@ -143,6 +143,11 @@
         ul.ltr {
             padding-left:20px;
         }
+        i {
+            cursor: pointer;
+            color: blue;
+            font-size: 50%;
+        }
         a {
             cursor: pointer;
             //color:black;
