upload photo. wip.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,7 @@ $navbar-default-link-active-bg: inherit;
 @import 'docs/docs';
 @import 'audios/audios';
 @import 'gallery/gallery';
+@import 'groups/groups';
 
 /* Elements */
 @import 'resources/elements/photo-strip';
